--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,17 @@ header {
     padding: 2em 0;
     border-bottom: 3px solid #4f3a55;
 }
+a {
+    text-decoration: none; 
+} 
+li:hover {
+    /* transform: translateY(10px); */  
+    transform: translateY(-2px);
+    transition: all 0.3s ease;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.3);
+    padding: 2px;
+    border-radius: 5px;
+}
 
 header h1 {
     margin: 0;
@@ -41,11 +52,7 @@ nav {
     text-align: center;
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+ 
 
 nav ul li {
     display: inline-block;
@@ -59,10 +66,7 @@ nav ul li a {
     transition: all 0.3s ease;
 }
 
-nav ul li a:hover {
-    text-decoration: underline;
-}
-
+ 
 section {
     margin: 40px 0;
     padding: 30px;
